# nunchaku

./: .env.copy  .gitmodules  Dockerfile  LICENCE.txt  MANIFEST.in  README.md  config.json  entrypoint.sh  example.py  pyproject.toml  setup.py
app/i2i/: flux_pix2pix_pipeline.py  run_gradio.py  utils.py  vars.py
app/t2i/: README.md  generate.py  get_metrics.py  latency.py  run_gradio.py  utils.py
comfyui/: README.md  __init__.py  nodes.py
comfyui/workflows/: flux.1-dev-svdquant.json  flux.1-schnell-svdquant.json
dev-scripts/: convert_nf4_flux.py  dump_flux.py  dump_flux_lora.py  eval_perf.sh  fakequant.py  merge_non_lora_weight.py  qmodule.py  run_flux.py  run_flux_generate.py
entrypoint/: load_pipeline.py  vars.py
entrypoint/openai/: api_server.py  base_response.py  create_image_request.py  log.py  protocol.py  s3_util.py  saas_util.py
examples/: flux.1-dev.py  flux.1-schnell.py  sana_1600m.py  sana_1600m_pag.py
nunchaku/: __version__.py
nunchaku/csrc/: flux.h  gemm.h  gemm88.h  module.h  ops.h  pybind.cpp  sana.h  utils.h
nunchaku/models/: flux.py  safety_checker.py  text_encoder.py  transformer_flux.py  transformer_sana.py  utils.py
nunchaku/pipelines/: flux.py
src/: FluxModel.cpp  FluxModel.h  Linear.cpp  Linear.h  Module.h  SanaModel.cpp  SanaModel.h  Serialization.cpp  Serialization.h  Tensor.h  activation.cpp  activation.h  common.h  debug.h  layernorm.cpp  layernorm.h  pytorch_compat.h
src/interop/: torch.cpp  torch.h
src/kernels/: activation_kernels.cu  activation_kernels.h  activation_kernels_impl.cuh  dispatch_cutlass.h  dwconv.cu  (+19 more)
(+44 files in other folders)
